--- a/Voir plus2.html
+++ b/Voir plus2.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <div>
+        <img src="./Capture d’écran 2025-04-22 141605.png" alt="image" width="100%" height="300px">
+        <div>
+            <a href="https://cedric-228.github.io/authentication-gate/"> Projet de Hospital </a>
+        </div>
+    </div>
+    <div>
         <ol>
             <li>
                
