--- a/voirplus.html
+++ b/voirplus.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div>
+      <img src="./Capture d’écran 2025-04-22 141605.png" alt="" width="100%" height="300px">  
+    </div>
+    <div>
         <ol>
             <li>
                
